# auditpal-subnetV2

./: .env.miner  .env.validator  pyproject.toml
agent/: Dockerfile  agent.py  entrypoint.sh  llm_client.py  poetry.toml  pyproject.toml  requirements.txt  runner.py
auditing/: agent_screener.py  challenge_client.py  models.py  sandbox.py  scorer.py
neurons/: miner.py  validator.py
template/: mock.py  protocol.py
template/api/: dummy.py
template/validator/: forward.py  reward.py
tests/: test_agent_runner.py  test_mock.py  test_template_validator.py
